# ghc-api-sandbox

./: .gitignore  ActionsAndDecisions.hs  ActionsAndObservations.hs  AltFastDom.hs  BComp.hs  BTT.hs  BackendRecord.hs  BitConsumer.hs  CmmPaths.hs  ControlTestMonad.hs  DotCfg.hs  DotGraph.hs  Entropy.hs  EntropyTransducer.hs  FastDom.hs  FlowTest.hs  LoadCmmGroup.hs  Main.hs  NOTES  PTest.hs  Peterson.hs  Peterson2.hs  PetersonR.hs  Placeholder.hs  README.md  RTest.hs  RunCmm.hs  SCode.hs  ShowCfg.hs  Split.hs  StackLang.hs  StgToCmmLite.hs  TxTest.hs  Words.hs  cabal.project.local  hie.yaml  mkfile  sandbox.cabal  wasmdiff
Attic/: CmmCollapse.hs  Dominators.hs  FlowCollapse.hs  LabeledWasmLang.hs  LoopInfo.hs  Opt.hs  PaperLang.hs  PaperRun.hs  PaperTx.hs  UnoptControlTx.hs
GHC/Cmm/: Collapse.hs  Dominators.hs  LoopInfo.hs  Reducibility.hs
GHC/Cmm/ControlFlow/: Run.hs
GHC/Cmm/Dataflow/: Dominators.hs
GHC/Cmm/Dataflow/Dominators/: Lint.hs
GHC/Cmm/Dominators/: Lint.hs
GHC/Cmm/Reducibility/: Viz.hs
GHC/Data/Graph/: Collapse.hs  Inductive.hs
GHC/Data/Graph/Inductive/: Collapse.hs  Graph.hs  PatriciaTree.hs
GHC/Test/: CmmPaths.hs  ControlMonad.hs
GHC/Test/ControlMonad/: QC.hs
GHC/Wasm/: ControlFlow.hs  Paper.hs
GHC/Wasm/ControlFlow/: Collapse.hs  FromCmm.hs  OfCmm.hs  Opt.hs  Paper.hs  PaperRun.hs  Run.hs
GHC/Wasm/Ppr/: Control.hs
GHC/WasmNCG/: WasmNCG.hs
Simple/: Codegen.hs  Common.hs  ImportStg.hs  Stack.hs  Stg.hs
Simple/Stg/: Outputable.hs
app/: Main.hs  StgToCmmLite.hs  build
attic/: FastDom.hs  Main8.10.5.noths  PMain.hs  Peterson.hs  StackLang.hs  StgReifyStack.hs  strip  wasmdiff
backend-tests/: BTT.hs
programs/: FailingLint.hs  Irr.hs  Irr3.hs  Irr4.hs  noloop.cmm  panic.cmm  selfloop.cmm
