cabal-version:      2.4
name:               sandbox
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norman Ramsey
maintainer:         nr@cs.tufts.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common program-default-options
  ghc-options: -haddock -Werror -Wincomplete-patterns -Wall -Wno-name-shadowing -fno-ignore-asserts

--  executable sandbox
--      import: program-default-options
--      main-is:          Main.hs
--
--      -- Modules included in this executable, other than Main.
--      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
--                      Simple.Stg.Outputable,
--                      Simple.ImportStg, Simple.Codegen, Simple.Common
--
--      -- LANGUAGE extensions used by modules in this package.
--      -- other-extensions:
--      build-depends:    base >=4.14.2.0,
--                        ghc >= 9.3,
--                        bytestring >= 0.10
--      hs-source-dirs:   .
--      default-language: Haskell2010
--
--  executable showcfg
--      import: program-default-options
--      main-is:          ShowCfg.hs
--
--      -- Modules included in this executable, other than Main.
--      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
--                      Simple.Stg.Outputable,
--                      Simple.ImportStg, Simple.Codegen, Simple.Common,
--                      DotCfg, GHC.Cmm.Dominators, Peterson, PetersonR
--
--      -- LANGUAGE extensions used by modules in this package.
--      -- other-extensions:
--      build-depends:    base >=4.14.2.0,
--                        ghc >= 9.3,
--                        bytestring >= 0.10
--      hs-source-dirs:   .
--      default-language: Haskell2010
--
--      ghc-options:

executable ptest
    import: program-default-options
    main-is:          PTest.hs

    -- Modules included in this executable, other than Main.
    other-modules:  GHC.Cmm.Dominators
                    DotCfg
                    SCode
                    GHC.Wasm.ControlFlow
                    GHC.Wasm.Ppr.Control
                    GHC.Wasm.ControlFlow.Run
                    GHC.Wasm.ControlFlow.OfCmm
                    GHC.Wasm.ControlFlow.Opt
                    GHC.Wasm.ControlFlow.Paper
                    GHC.Wasm.ControlFlow.PaperRun
                    GHC.Cmm.Dominators.Lint
                    GHC.Cmm.Reducibility
                    GHC.Test.ControlMonad
                    GHC.Cmm.LoopInfo
                    GHC.Test.ControlMonad.QC
                    GHC.Test.CmmPaths
                    GHC.Cmm.ControlFlow.Run
                    GHC.Wasm.ControlFlow.Collapse
                    GHC.Cmm.Collapse
                    GHC.Wasm.Paper
                    GHC.Data.Graph.Inductive
                    GHC.Data.Graph.Inductive.PatriciaTree
                    FlowTest
                    StgToCmmLite
                    DotGraph
                    Words
                    TxTest

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.2.0,
                      ghc >= 9.3,
                      ghc-boot >= 9.3,
                      bytestring >= 0.10,
                      filepath >= 1.4,
                      array >= 0.5,
                      QuickCheck >= 2.14.2,
                      containers >= 0.6,
                      mtl >= 2.2,
                      utf8-string == 1.0.2,
                      cryptohash-sha1 == 0.11.*
    hs-source-dirs:   .
    default-language: Haskell2010

    ghc-options:

executable btt
    import: program-default-options
    main-is:          BTT.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.2.0,
                      ghc >= 9.3,
                      containers >= 0.6
    hs-source-dirs:   .
    default-language: Haskell2010

    ghc-options:

executable bcomp
    import: program-default-options
    main-is:          BComp.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.2.0,
                      ghc >= 9.3,
                      containers >= 0.6
    hs-source-dirs:   .
    default-language: Haskell2010

    ghc-options:
